# pelias.adapter

./: .dockerignore  .flake8  .gitignore  CHANGES.txt  README.md  buildout.cfg  dev.env  logging.ini  main.py  pyproject.toml  restart_wrapper.sh  setup.py
.github/workflows/: ci.yml
com/github/ott/pelias/adapter/: __init__.py
com/github/ott/pelias/adapter/core/: __init__.py  config.py  errors.py
com/github/ott/pelias/adapter/models/solr/: solr_record.py  solr_response.py  solr_stop_record.py
com/github/ott/pelias/adapter/routers/: __init__.py  core.py  pelias.py  solr.py
com/github/ott/pelias/adapter/schema/: pelias_schema.py  solr_schema.py
com/github/ott/pelias/adapter/service/: config.py  pelias_json_queries.py  pelias_service.py  pelias_to_solr.py  pelias_wrapper.py  solr_service.py  util.py
config/: base.ini  development.ini  local_pelias.ini  production.ini  staging.ini
docker/: Dockerfile  buildDocker.sh  compose.yml  entrypoint.sh
pelias/adapter/control/: pelias_json_queries.py  pelias_to_solr.py  pelias_wrapper.py
pelias/adapter/model/: solr_record.py  solr_stop_record.py
pelias/adapter/model/solr/: solr_record.py  solr_response.py  solr_stop_record.py
pelias/adapter/pyramid/: app.py  views.py
pelias/adapter/service/: pelias_service.py  refine_service.py  util.py
pelias/adapter/tests/: README.md  helpers.py  pr.py  stress.py  test_agencies.py  test_refine_service.py  test_refine_utils.py  test_reverse.py  test_stops.py  tests.py  tests_strings_crash.py
pelias/adapter/tests/data/: alias.csv  autocomplete-hop-fastpass.json  autocomplete_no_results.json  landmarks.csv  search13135.json  search_7-11_ticket.json  stops.csv  test_util_data.json
tests/: README.md  pr.py  test_main.py  test_stops.py  tests.py  tests_strings_crash.py
tests/com/github/ott/pelias/adapter/service/: test_pelias_service.py
tests/comparison_testing/: test_pelias.py  test_solr.py  util.py
tests/data/: alias.csv  autocomplete_no_results.json  landmarks.csv  search_7-11_ticket.json  stops.csv
